hero image on small screens issue v6

--- a/styles/hero.css
+++ b/styles/hero.css
@@ -65,8 +65,9 @@
         display: flex;
         flex-direction: column;
         justify-content: space-between;
-        height: 100vh;
-        padding: 40px;
+        height: 100%;
+        margin:auto;
+        padding: 0px;
         box-sizing: border-box;
         color: white;
         background: url("../img/CV-small-screen.jpg");
@@ -74,6 +75,7 @@
         background-repeat: no-repeat;
         background-size: cover;
         background-attachment: fixed;
+        position: relative;
     }
 
     .hero-button {
